--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@explorables/explorable_template",
-  "title": "Explorable Title",
-  "subtitle": "Explorable Subtitle",
-  "description": "This is a template for making a complexity explorable. The template can be used to create a new complexity explorable. This template implements the Vicsek Model.",
+  "name": "@explorables/double_trouble",
+  "title": "Double Trouble",
+  "subtitle": "The double pendulum",
+  "description": "An example of chaotic dynamics in a simple mechanical system",
   "author": "Dirk Brockmann (https://synosy.github.io)",
   "version": "2.0.5",
   "license": "CC-BY-4.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dirkbrockmann/explorable_template.git"
+    "url": "git+https://github.com/dirkbrockmann/double_trouble.git"
   },
   "type": "module",
   "main": "./dist/index.umd.js",
@@ -46,13 +46,13 @@
   ],
   "dependencies": {
     "d3": "^7.8.5",
-    "d3-widgets": "^2.0.3",
+    "d3-widgets": "^2.1.4",
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "vite-plugin-css-injected-by-js": "^3.5.2",
     "@tailwindcss/vite": "^4.1.4",
     "tailwindcss": "^4.1.4",
-    "vite": "^6.3.2"
+    "vite": "^6.3.2",
+    "vite-plugin-css-injected-by-js": "^3.5.2"
   }
 }
